# EMA-ViTMatting

./: .gitignore  README.md  README_CN.md  Trainer.py  config.py  demo_CS.py  demo_Fc.py  inferenceCS.py  pyproject.toml  requirements.txt  train.py
benchmark/: loss.py
benchmark/config/: model_MobileViT_parameters.yaml  model_ViT_parameters.yaml  model_VisionTransformer_parameters.yaml
benchmark/eval/: __init__.py  cal_laplacian.py  cal_laplacianPyramid.py  cal_segloss.py
benchmark/utils/: print_structure.py  testGPU.py
dataset/: AIM_500_datasets.py  __init__.py  data_aug.py  dataset_classification.py
model/: GoogLeNet_model.py  Inception_model.py  __init__.py  fc_model.py  mobile_vit.py  myalexnet.py  myresnet.py  myvgg.py  vit.py  vit_seg_configs.py  vit_seg_modeling.py
model/dinov2_layers/: attention.py  block.py  mlp.py  patch_embed.py
onnx_demo/: export_onnx.py  infer_onnx.py
